--- a/portail/client/src/app/changes/changes-config-panel/changes-config-panel.component.html
+++ b/portail/client/src/app/changes/changes-config-panel/changes-config-panel.component.html
@@ -1,83 +1,85 @@
 <div class="body">
   <div>
     <div class="card-header p-2 text-center" style="word-wrap: break-word;">
-        <b>Rechercher des changements</b>
+        <b>{{ 'change_config.search' | translate }}</b>
     </div>
     <form [formGroup]="changesFilterForm" class="container" novalidate>
       <div class="form-group">
-        <label for="mydaterange" style="margin-top:5px">Période de temps</label>
-        <my-date-range-picker id="mydaterange" name="mydaterange" placeholder="Dates de début et de fin"
+        <label for="mydaterange" style="margin-top:5px">{{ 'change_config.time' | translate }}</label>
+        <my-date-range-picker id="mydaterange" name="mydaterange" placeholder="{{ 'change_config.time' | translate }}"
           [options]="myDateRangePickerOptions" [selDateRange]="model" formControlName="dates" required></my-date-range-picker>
       </div>
       <div class="form-group">
-        <label for="thematicSelection">Thématique</label>
+        <label for="thematicSelection">{{ 'change_config.topic' | translate }}</label>
         <select class="custom-select mr-sm-2" id="thematicSelection" formControlName="thematic" required>
           <ng-container *ngFor="let category of categoryMap | keyvalue">
-            <option class="mb-2 bg-secondary text-white" disabled>{{category.key}}</option>
+            <option class="mb-2 bg-secondary text-white" disabled>{{getTranslationKeyForCategory(category.key) | translate}}</option>
             <ng-container *ngFor="let thematic of category.value">
-              <option value="{{thematic.id}}">{{thematic.name}}</option>
+              <option value="{{thematic.id}}">{{ getTranslationKeyForName(thematic.name) | translate }}</option>
             </ng-container>
           </ng-container>
         </select>
         <div *ngIf="thematic.invalid && (thematic.dirty || thematic.touched)" class="alert alert-danger">
           <div *ngIf="thematic.errors.required">
-            Sélectionnez une thématique
+            {{ 'change_config.select_topic' | translate }}
           </div>
         </div>
       </div>
 
       <div class="form-group">
-        <label for="zone">Emprise géographique</label>
+        <label for="zone">{{ 'change_config.footprint' | translate }}</label>
         <div id="zone" style="font-size:0.8rem; margin-left:10px;">
-          Déplacez-vous sur la carte pour sélectionner la zone de recherche
+          {{ 'change_config.zone' | translate }}
         </div>
       </div>
-      <div class=submitButton style="text-align:center;padding:5px">
-        <button type="button" class="btn btn-success" (click)="onSubmit()">Lancer la recherche</button>
+      <div class="submitButton" style="text-align:center;padding:5px">
+        <button type="button" class="btn btn-danger" (click)="onSubmit()">{{ 'change_config.launch' | translate }}</button>
       </div>
-      <div  style="font-size:80%;text-align:center;padding:5px" *ngIf="lastChange">
-        <i>Dernière mise à jour le {{lastChange.toLocaleString('fr-FR', {timeZone: 'UTC'})}}</i>
+      <div style="font-size:80%;text-align:center;padding:5px" *ngIf="lastChange">
+        <i>{{ 'change_config.update' | translate }} {{lastChange.toLocaleString('fr-FR', {timeZone: 'UTC'})}}</i>
       </div>
       <app-load-spinner *ngIf="displayLoadSpinner"></app-load-spinner>
     </form>
 
     <div *ngIf="changesList && changesList.length < 1" class="alert alert-danger" role="alert">
-      Aucun changement n'a été trouvé pour cette requête.
+      {{ 'change_config.nochange' | translate }}
     </div>
     <div *ngIf="changesList && changesList.length > 0 && !tooMuchResult" class="alert alert-success" role="alert">
-      {{changesList.length}} résultats ont été trouvés
+      {{ 'change_config.results' | translate: { count: changesList.length } }}
     </div>
     <div *ngIf="changesList && tooMuchResult" class="alert alert-warning">
-      <i class='fa fa-warning' aria-hidden='true'></i>&nbsp;La taille de la réponse ({{responseSizeInMo}} Mo) est importante et  les résultats risquent d'être lourds à afficher.<br>
-      Vous pouvez zoomer pour réduire la zone de recherche ou limiter la plage de dates, puis relancer la recherche ou poursuivre le chargement des données.<br>
-      <button type="button" class="btn btn-small btn-success" (click)="showDatas()">Poursuivre</button>
+      <i class='fa fa-warning' aria-hidden='true'></i>&nbsp;{{ 'change_config.size1' | translate }} ({{responseSizeInMo}} Mo) {{ 'change_config.size2' | translate }}<br>
+      {{ 'change_config.size3' | translate }}<br>
+      <button type="button" class="btn btn-small btn-danger" (click)="showDatas()">{{ 'change_config.continue' | translate }}</button>
     </div>
     <div *ngIf="searchChangesTimedOut" class="alert alert-warning">
-      <i class='fa fa-warning' aria-hidden='true'></i>&nbsp;La requête a expiré. Il est possible que Le volume de changements soit trop important.<br>
-      Vous pouvez zoomer pour réduire la zone de recherche ou limiter la plage de dates, puis relancer la recherche.<br>
+      <i class='fa fa-warning' aria-hidden='true'></i>&nbsp;{{ 'change_config.expire1' | translate }}<br>
+      {{ 'change_config.expire2' | translate }}<br>
     </div>
     <div *ngIf="unhandledError" class="alert alert-danger">
-      <i class='fa fa-danger' aria-hidden='true'></i>&nbsp;Désolé, une erreur s'est produite.<br>
+      <i class='fa fa-danger' aria-hidden='true'></i>&nbsp;{{ 'change_config.error' | translate }}<br>
     </div>
   </div>
 
   <div *ngIf="displayReport" id="report" style="border-top: 1px solid rgba(253, 159, 159, 0.125);">
       <div class="card-header p-2 text-center" style="word-wrap: break-word;">
-          <b>Récapitulatif</b>
+          <b>{{ 'change_config.summary' | translate }}</b>
       </div>
       <div style="text-align:center; font-size:0.8em">
-        Du {{changesRequest.beginDate.toLocaleString('fr-FR', {timeZone: 'UTC'})}}
-         au {{changesRequest.endDate.toLocaleString('fr-FR', {timeZone: 'UTC'})}}
+        {{ 'change_config.from' | translate }} {{changesRequest.beginDate.toLocaleString('fr-FR', {timeZone: 'UTC'})}} {{ 'change_config.to' | translate }} {{changesRequest.endDate.toLocaleString('fr-FR', {timeZone: 'UTC'})}}
       </div>
     <table style="border-left : 5px;max-height:100px;">
       <tr>
-        <th style="padding-left:5px">Catégorie</th>
-        <th style="text-align:center;">Nombre d'entités</th>
+        <th style="padding-left:5px">{{ 'change_config.category' | translate }} 
+          <a [href]="getTranslatedUrl('change_config.url')" target="_blank" style="color: #cc1417;">
+            <i class="fa fa-question-circle" aria-hidden="true"></i>
+          </a>
+        </th>
+        <th style="text-align:center;">{{ 'change_config.number' | translate }}</th>
       </tr>
       <tr *ngFor="let type of reportInfos | keyvalue" class="reportTable">
         <td class="categorie">
-            <a>{{type.key.short_name}}</a>
-            <span [routerLink]="['/changements-aide']" fragment="{{type.key.ref}}" class="metadata-circle" title="Description sur la page d'aide"><b>?</b></span>
+            <a>{{type.key.short_name | translate}}</a>
         </td>
         <td style="text-align:center">{{type.value}}</td>
       </tr>
