--- a/portail/client/src/app/map/map.component.css
+++ b/portail/client/src/app/map/map.component.css
@@ -115,11 +115,11 @@ label  {
 
 
 #map-scale {
-    background-color: #CC1517; /* changez ceci à la couleur de votre choix */
-    color: #ffffff; /* couleur du texte de l'échelle */
+    background-color: #CC1517;
+    color: #ffffff;
 }
 
 #mouse-position {
-    background-color: #CC1517; /* changez ceci à la couleur de votre choix */
-    color: #ffffff; /* couleur du texte de l'échelle */
+    background-color: #CC1517;
+    color: #ffffff;
 }
